fix(frontend): increase contrast of small font colour

--- a/frontend/src/assets/stylesheets/main.scss
+++ b/frontend/src/assets/stylesheets/main.scss
@@ -499,7 +499,7 @@ main.projects {
       }
     } //h2
     small {
-      color: gray;
+      color: $darkgray;
       font-family: KingsBureauGrotFiveOne, sans-serif;
       //font-family: KingsBureauGrotThreeSeven, sans-serif;
       font-weight: 400;
